# cop-demo-vcpkg-cmake

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
SampleApp/: CMakeLists.txt  sample_app.cpp
cmake/: CompilerWarnings.cmake  GenerateProjects.cmake  StandardProjectSettings.cmake
mathlib/: CMakeLists.txt  math.cpp
mathlib/include/mathlib/: math.hpp
mathlib/src/: math.cpp
mathlib_test/: CMakeLists.txt
mathlib_test/src/: addtests.cpp  first_test.cpp  main_test.cpp  multests.cpp
sample_app/: CMakeLists.txt
sample_app/src/: main.cpp
tests/: CMakeLists.txt  first_test.cpp
